docs(material/table): fix example overflowing docs site width (#20063)
Closes https://github.com/angular/material.angular.io/pull/778

--- a/src/components-examples/material/table/table-sticky-columns/table-sticky-columns-example.css
+++ b/src/components-examples/material/table/table-sticky-columns/table-sticky-columns-example.css
@@ -1,6 +1,7 @@
 .example-container {
   height: 400px;
   width: 550px;
+  max-width: 100%;
   overflow: auto;
 }
 
